--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
     "tsdx": "^0.13.2",
     "tslib": "^2.0.0",
     "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "@babel/core": "^7.11.0",
+    "babel-plugin-tester": "^9.2.0"
   }
 }
