--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.11.0",
+    "@babel/helper-module-imports": "^7.10.4",
     "babel-plugin-tester": "^9.2.0"
   }
 }
