--- a/example/package.json
+++ b/example/package.json
@@ -13,8 +13,7 @@
     "next": "9.5.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "superjson": "^1.1.0",
-    "superjson-with-next": "file:../"
+    "superjson": "^1.1.0"
   },
   "devDependencies": {
     "@types/react": "^16.9.44",
