--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "module": "dist/babel-plugin-superjson-next.esm.js",
   "devDependencies": {
     "@types/react": "^16.9.44",
+    "all-contributors-cli": "^6.17.0",
     "babel-plugin-tester": "^9.2.0",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.2.5",
