--- a/package.json
+++ b/package.json
@@ -14,16 +14,12 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "prepare": "yarn build"
-  },
-  "peerDependencies": {
-    "next": "^9.5.1",
-    "react": "^16.13.1",
-    "superjson": "1.x"
+    "prepare": "yarn build",
+    "lint": "eslint"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "tsdx lint"
+      "pre-commit": "yarn lint"
     }
   },
   "prettier": {
@@ -39,17 +35,21 @@
     "@types/react": "^16.9.44",
     "all-contributors-cli": "^6.17.0",
     "babel-plugin-tester": "^9.2.0",
+    "eslint": "^7.8.1",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.2.5",
     "jest": "^26.4.2",
-    "next": "^9.5.1",
+    "next": "^9.5.3",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
-    "superjson": "^1.1.0",
+    "superjson": "^1.2.1",
     "ts-jest": "^26.3.0",
-    "tsdx": "^0.13.2",
-    "tslib": "^2.0.0",
     "typescript": "^3.9.7"
+  },
+  "peerDependencies": {
+    "next": "9.X",
+    "react": "16.X",
+    "superjson": "1.x"
   },
   "dependencies": {
     "@babel/core": "^7.11.0",
