--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
   },
   "dependencies": {
     "@babel/core": "^7.11.0",
-    "@babel/helper-module-imports": "^7.10.4"
+    "@babel/helper-module-imports": "^7.10.4",
+    "@types/hoist-non-react-statics": "^3.3.1",
+    "hoist-non-react-statics": "^3.3.2"
   }
 }
