--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   "author": "Simon Knott",
   "module": "dist/babel-plugin-superjson-next.esm.js",
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@types/hoist-non-react-statics": "^3.3.1",
     "@types/react": "^16.9.44",
     "all-contributors-cli": "^6.17.0",
     "babel-plugin-tester": "^9.2.0",
@@ -47,14 +49,13 @@
     "typescript": "^3.9.7"
   },
   "peerDependencies": {
+    "@babel/core": "7.X",
     "next": "9.X",
     "react": "16.X",
     "superjson": "1.x"
   },
   "dependencies": {
-    "@babel/core": "^7.11.0",
     "@babel/helper-module-imports": "^7.10.4",
-    "@types/hoist-non-react-statics": "^3.3.1",
     "hoist-non-react-statics": "^3.3.2"
   }
 }
