Omit testcafe action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,5 @@ jobs:
         run: yarn build
         working-directory: ./example
 
-      - name: Run tests
-        uses: DevExpress/testcafe-action@latest
-        with:
-          args: "chrome example/tests --app 'yarn --cwd example start'"
+      - Name: Run integration tests
+        run: yarn testcafe chrome tests --app "yarn start"
