Forgot the working dir ...

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,3 +44,4 @@ jobs:
 
       - name: Run integration tests
         run: yarn testcafe chrome tests --app "yarn start"
+        working-directory: ./example
