--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "babel-plugin-superjson-next": "file:../",
-    "next": "^10.0.4",
+    "next": "10",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "superjson": "^1.4.1"
