--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -126,6 +126,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "cyrus-za",
+      "name": "Pieter Venter",
+      "avatar_url": "https://avatars.githubusercontent.com/u/1845861?v=4",
+      "profile": "https://pieter.venter.pro/",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7,
