--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "author": "Simon Knott",
   "module": "dist/babel-plugin-superjson-next.esm.js",
   "devDependencies": {
+    "@testing-library/react-native": "^7.1.0",
     "@types/hoist-non-react-statics": "^3.3.1",
     "@types/react": "^17.0.0",
     "all-contributors-cli": "^6.19.0",
@@ -43,6 +44,7 @@
     "next": "^10.0.4",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
+    "react-test-renderer": "^17.0.1",
     "superjson": "^1.4.1",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
