fix: specify lib in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "declaration": true,
     "sourceMap": true,
+    "lib": ["es2016"],
     "rootDir": "src",
     "outDir": "dist",
     "strict": true,
