fix: @babel/* as devDependencies, don't include src/ in bundle

--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "typings": "dist/index.d.ts",
   "files": [
     "dist",
-    "src",
     "tools.js"
   ],
   "engines": {
@@ -32,6 +31,8 @@
   "author": "Simon Knott",
   "module": "dist/babel-plugin-superjson-next.esm.js",
   "devDependencies": {
+    "@babel/core": "^7.12.13",
+    "@babel/types": "^7.12.13",
     "@testing-library/react-native": "^7.1.0",
     "@types/hoist-non-react-statics": "^3.3.1",
     "@types/react": "^17.0.0",
