--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "babel-plugin-superjson-next": "file:../",
-    "next": "10.0.5",
+    "next": "^11.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "superjson": "^1.5.0"
