--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@babel/core": "^7.17.8",
     "@testing-library/react-native": "^7.2.0",
+    "@types/babel__core": "^7.1.19",
     "@types/hoist-non-react-statics": "^3.3.1",
     "@types/jest": "^26.0.23",
     "@types/react": "^17.0.4",
@@ -64,7 +65,6 @@
   },
   "dependencies": {
     "@babel/helper-module-imports": "^7.16.7",
-    "@babel/types": "^7.17.0",
     "hoist-non-react-statics": "^3.3.2"
   }
 }
